--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -667,7 +667,7 @@
 {{end}}
 
 {{define "waitingForWalletForm"}}
-<div class="text-center mb-4"><img class="logo" data-tmpl="logo" src="/img/coins/dcr.png"></div>
+<div class="text-center mb-4"><img class="large-icon" data-tmpl="logo" src="/img/coins/dcr.png"></div>
 <div class="d-flex flex-column align-items-start border-start ps-3 mb-4">
   <div class="flex-center flex-row">
     <div class="icons text-end pe-3">
