--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -25,8 +25,8 @@
 {{define "header"}}
 <header id="header" class="border-bottom mb-2">
   {{$authed := .UserInfo.Authed}}
-  <a href="/" class="logo-icon d-none d-md-block mx-2"></a>
-  <a href="/" class="logo-icon d-block d-md-none mx-2"></a>
+  <a href="/" class="logo large-icon d-none d-md-block mx-2"></a>
+  <a href="/" class="logo large-icon d-block d-md-none mx-2"></a>
   <div id="headerSpace"></div>
   <div class="mainlinks fs18 pe-2 text-nowrap">
 
