--- a/client/webserver/site/src/css/order.scss
+++ b/client/webserver/site/src/css/order.scss
@@ -8,12 +8,12 @@ div.order-datum {
 
   div:first-child {
     font-family: $demi-sans;
-    background-color: var(--body-bg-tertiary);
+    background-color: var(--tertiary-bg);
   }
 }
 
 div.match-header {
-  background-color: var(--body-bg-tertiary);
+  background-color: var(--tertiary-bg);
 }
 
 div.match-card {
