--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -23,7 +23,7 @@
 {{end}}
 
 {{define "header"}}
-<header id="header" class="maintop border-bottom">
+<header id="header" class="border-bottom mb-2">
   {{$authed := .UserInfo.Authed}}
   <a href="/" class="logo-icon d-none d-md-block mx-2"></a>
   <a href="/" class="logo-icon d-block d-md-none mx-2"></a>
