--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -19,7 +19,7 @@ body {
   color: var(--text-color);
 }
 
-header.maintop {
+header {
   width: 100%;
   height: 70px;
   min-height: 70px;
@@ -27,7 +27,14 @@ header.maintop {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  background-color: var(--body-bg-secondary);
+  background-color: var(--section-bg);
+}
+
+section {
+  background-color: var(--section-bg);
+  margin: 0.5rem 0;
+  border: 1px solid var(--border-color);
+  border-radius: 0.25rem;
 }
 
 a.logo-icon {
@@ -61,9 +68,9 @@ div.mainlinks {
   }
 }
 
-header.maintop a,
-header.maintop a:visited,
-header.maintop a:hover,
+header a,
+header a:visited,
+header a:hover,
 .plainlink,
 .plainlink:visited,
 .plainlink:hover {
@@ -155,7 +162,7 @@ z-index: 1000;
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  background-color: var(--body-bg);
+  background-color: var(--section-bg);
 
   @include border;
 
@@ -172,6 +179,8 @@ z-index: 1000;
 
   .header {
     @include border-bottom;
+
+    background-color: var(--section-bg);
 
     &>div {
       opacity: 0.5;
@@ -192,7 +201,7 @@ z-index: 1000;
   width: 425px;
 
   div.note.firstview {
-    background-color: var(--body-bg-tertiary);
+    background-color: var(--tertiary-bg);
   }
 
   div.note:not(:last-child) {
@@ -206,4 +215,17 @@ z-index: 1000;
 
 #loader {
   background-color: var(--loader-bg);
+}
+
+@include media-breakpoint-up(sm) {
+  section {
+    margin: 0.5rem;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  section,
+  .w-lg-auto {
+    width: auto;
+  }
 }
