--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -23,7 +23,13 @@
     width: 400px;
   }
 
+  #content {
+    flex-direction: column;
+  }
+
   #assetSelect {
+    flex-direction: row;
+
     .icon-select {
       cursor: pointer;
       min-height: fit-content;
@@ -40,8 +46,20 @@
         width: 20px;
         height: 20px;
         border-radius: 10px;
-        border: 3px solid var(--body-bg);
+        border: 3px solid var(--section-bg);
+        background-color: var(--section-bg);
+      }
+
+      &.selected,
+      &:hover {
         background-color: var(--body-bg);
+        border: 1px solid var(--border-color);
+        opacity: 1;
+
+        img[data-tmpl=parentImg] {
+          border: 3px solid var(--body-bg);
+          background-color: var(--section-ody-bg);
+        }
       }
     }
 
@@ -51,11 +69,6 @@
       [data-tmpl=balance] {
         display: none;
       }
-    }
-
-    .icon-select:hover,
-    .icon-select.selected {
-      opacity: 1;
     }
   }
 
@@ -212,7 +225,7 @@
   }
 
   #purchaseTicketsErrBox {
-    background-color: var(--body-bg);
+    background-color: var(--section-bg);
   }
 }
 
@@ -263,11 +276,6 @@
           width: 28px;
           height: 28px;
           border-radius: 15px;
-        }
-
-        &.selected,
-        &:hover {
-          background-color: var(--body-bg);
         }
       }
     }
