--- a/client/webserver/site/src/html/mmlogs.tmpl
+++ b/client/webserver/site/src/html/mmlogs.tmpl
@@ -52,7 +52,7 @@
   </div>
 
   <div id="forms" class="d-hide">
-    <form id="dexOrderDetailsForm" class="panel position-relative flex-center flex-column fs20 d-hide">
+    <form id="dexOrderDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs24 sans-light">
           [[[dex_order_details]]]
@@ -91,7 +91,7 @@
       </table>
     </form>
 
-    <form id="cexOrderDetailsForm" class="panel position-relative flex-center flex-column fs20 d-hide">
+    <form id="cexOrderDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs24 sans-light">
           [[[cex_order_details]]]
@@ -122,7 +122,7 @@
       </span>
     </form>
 
-    <form id="depositDetailsForm" class="panel position-relative flex-center flex-column fs20 d-hide">
+    <form id="depositDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs24 sans-light">
           [[[deposit_details]]]
@@ -149,7 +149,7 @@
       </span>
     </form>
 
-    <form id="withdrawalDetailsForm" class="panel position-relative flex-center flex-column fs20 d-hide">
+    <form id="withdrawalDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="px-2 py-1 text-center position-relative fs24 sans-light">
           [[[withdrawal_details]]]
