--- a/client/webserver/site/src/html/orders.tmpl
+++ b/client/webserver/site/src/html/orders.tmpl
@@ -1,51 +1,55 @@
 {{define "orders"}}
 {{template "top" .}}
-<div id="main" data-handler="orders" class="main overflow-y-auto">
+<div id="main" data-handler="orders" class="main w-100 d-block overflow-y-auto">
 
-  <div class="w-100 d-flex justify-content-start align-items-stretch">
-    <div class="flex-stretch-column justify-content-start orders-left-side border-end pt-3 px-2">
-      <div class="demi fs22 text-center mb-3">[[[Order History]]]</div>
-      <div class="filter-display">[[[Exchanges]]]</div>
-      <div id="hostFilter" class="filter-opts mb-3">
-        {{range .Hosts}}
-        <div class="ps-2 pe-2">
-          <input class="form-check-input" type="checkbox" value="{{.}}">
-          <label class="form-check-label fs14">{{.}}</label>
+  <div class="w-100 d-flex justify-content-start">
+    <div class="flex-stretch-column justify-content-start">
+      <section class="py-2 px-3">
+        <div class="demi fs22 text-center pb-2 border-bottom">[[[Order History]]]</div>
+        <div class="text-center fs18 py-2"> Filters</div>
+        <div class="filter-display">[[[Exchanges]]]</div>
+        <div id="hostFilter" class="filter-opts mb-3">
+          {{range .Hosts}}
+          <div class="ps-2 pe-2">
+            <input class="form-check-input" type="checkbox" value="{{.}}">
+            <label class="form-check-label">{{.}}</label>
+          </div>
+          {{end}}
+          <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small">[[[apply]]]</button></div>
         </div>
-        {{end}}
-        <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small">[[[apply]]]</button></div>
-      </div>
-      <div class="filter-display">[[[Assets]]]</div>
-      <div id="assetFilter" class="filter-opts mb-3">
-        {{range $assetID, $asset := .Assets}}
-        <div class="ps-2 pe-2">
-          <input class="form-check-input" type="checkbox" value="{{$assetID}}">
-          <label class="form-check-label fs14">{{$asset.Symbol}}</label>
+        <div class="filter-display">[[[Assets]]]</div>
+        <div id="assetFilter" class="filter-opts mb-3">
+          {{range $assetID, $asset := .Assets}}
+          <div class="ps-2 pe-2">
+            <input class="form-check-input" type="checkbox" value="{{$assetID}}">
+            <label class="form-check-label">{{$asset.Symbol}}</label>
+          </div>
+          {{end}}
+          <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small go">[[[apply]]]</button></div>
         </div>
-        {{end}}
-        <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small go">[[[apply]]]</button></div>
-      </div>
-      <div class="filter-display">[[[Status]]]</div>
-      <div id="statusFilter" class="filter-opts mb-3">
-        {{range $status, $statusString := .Statuses}}
-        <div class="ps-2 pe-2">
-          <input class="form-check-input" type="checkbox" value="{{$status}}">
-          <label class="form-check-label fs14">{{$statusString}}</label>
+        <div class="filter-display">[[[Status]]]</div>
+        <div id="statusFilter" class="filter-opts mb-3">
+          {{range $status, $statusString := .Statuses}}
+          <div class="ps-2 pe-2">
+            <input class="form-check-input" type="checkbox" value="{{$status}}">
+            <label class="form-check-label">{{$statusString}}</label>
+          </div>
+          {{end}}
+          <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small go">[[[apply]]]</button></div>
         </div>
-        {{end}}
-        <div class="apply-bttn d-hide mt-2 me-2 text-right"><button class="small go">[[[apply]]]</button></div>
-      </div>
-      <div id="exportOrders" class="text-center">
-        <button class="small">[[[Export Trades]]]</button>
-      </div>
-      <hr class="dashed mb-3">
-      <div class="demi text-center px-4 mb-2">[[[other_actions]]]</div>
-      <div id="deleteArchivedRecords" class="pb-2">
-        <button class="small danger">[[[delete_archived_records]]]</button>
-      </div>
+      </section>
+      <section class="py-2 px-3">
+        <div class="demi text-center">[[[other_actions]]]</div>
+        <button id="exportOrders" class="small w-100 mt-3">
+          [[[Export Trades]]]
+        </button>
+        <button id="deleteArchivedRecords" class="small danger w-100 mt-3">
+          [[[delete_archived_records]]]
+        </button>
+      </section>
     </div>
-    <div class="flex-grow-1 p-3">
-      <table id="ordersTable" class="striped row-hover compact border row-border">
+    <section class="flex-grow-1">
+      <table id="ordersTable" class="striped row-hover row-border">
         <thead id="tableHead">
           <tr>
             <th class="py-2">[[[Trade]]]</th>
@@ -55,7 +59,7 @@
             <th class="text-end py-2">[[[Rate]]]</th>
             <th class="text-end py-2">[[[Filled]]]</th>
             <th class="text-end py-2">[[[Settled]]]</th>
-            <th class="d-md-none d-lg-table-cell py-2"></th>
+            <th class="d-md-none d-lg-table-cell py-2">Age</th>
             <th class="text-end py-2">[[[Time]]]</th>
             <th></th> {{/* Link */}}
           </tr>
@@ -74,18 +78,17 @@
             <td data-tmpl="host" class="grey"></td>
             <td data-tmpl="type"></td>
             <td data-tmpl="status"></td>
-            <td data-tmpl="rate" class="text-end"></td>
+            <td data-tmpl="rate" class="text-end text-nowrap"></td>
             <td data-tmpl="filled" class="text-end"></td>
             <td data-tmpl="settled" class="text-end"></td>
-            <td data-tmpl="timeAgo" class="text-end d-md-none d-lg-table-cell"></td>
+            <td data-tmpl="timeAgo" class="text-end d-md-none d-lg-table-cell text-nowrap"></td>
             <td data-tmpl="time" class="text-end"></td>
             <td><a class="ico-open pointer plainlink" data-tmpl="link"></a></td>
           </tr>
         </tbody>
       </table>
-      <div id="orderLoader" class="text-center mt-2 mb-5 d-hide"><div class="ico-spinner spinner"></div></div>
-      <div class="py-5"></div>
-    </div>
+      <div id="orderLoader" class="text-center py-3 d-hide"><div class="ico-spinner spinner"></div></div>
+    </section>
   </div>
 
   {{- /* POP UP FORMS */ -}}
