mm ui: implement quick configuration form (#2697)
* implement quick configuration mode for mmbot

* merge RangeOption with XYRangeHandler.

* enable mm oracles for tokens

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -23,11 +23,19 @@ textarea {
   }
 }
 
+select {
+  background-color: var(--form-input-bg) !important;
+}
+
 .form-select {
   color: var(--text-color);
   background-color: var(--form-input-bg);
-  border-color: 1px solid var(--form-input-border);
+  border: 1px solid var(--form-input-border);
   border-radius: 3px;
+
+  &:focus {
+    border-color: var(--form-input-border-focus);
+  }
 }
 
 #regAssetForm {
@@ -251,6 +259,7 @@ div[data-handler=init],
 div[data-handler=login],
 div[data-handler=register] {
  #forms {
+  margin-top: 70px;
   z-index: 99;
  } 
 }
@@ -355,7 +364,18 @@ a[data-tmpl=walletCfgGuide] {
   border-radius: 3px;
   padding: 4px;
   margin-top: 8px;
-  opacity: 0.9;
+
+  & > div.disabled {
+    opacity: 0.8;
+
+    [data-tmpl=sliderBox] {
+      cursor: default;
+
+      .slider .slider-handle {
+        background-color: #777b;
+      }
+    }
+  }
 
   div.opt-check {
     width: 15px;
@@ -372,21 +392,24 @@ a[data-tmpl=walletCfgGuide] {
     height: 16px;
   }
 
-  .slider {
-    margin: 10px 10px 5px;
-    height: 2px;
-    background-color: grey;
-    position: relative;
+  [data-tmpl=sliderBox] {
+    cursor: pointer;
 
-    .slider-handle {
-      position: absolute;
-      height: 20px;
-      width: 14px;
-      top: -9px;
-      border-radius: 7px;
-      background-color: #2cce9c;
-      border: 2px solid #424242;
-      cursor: pointer;
+    .slider {
+      margin: 10px 10px 5px;
+      height: 2px;
+      background-color: grey;
+      position: relative;
+
+      .slider-handle {
+        position: absolute;
+        height: 20px;
+        width: 14px;
+        top: -9px;
+        border-radius: 7px;
+        background-color: #2cce9c;
+        border: 2px solid #424242;
+      }
     }
   }
 }
