--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -139,7 +139,7 @@
         <thead>
           <tr>
             <th colspan="2">
-              <a data-tmpl="lostTxID" class="break-all"></a>
+              <a data-tmpl="lostTxID" class="word-break-all"></a>
             </th>
           </tr>
         </thead>
@@ -227,7 +227,7 @@
           can try to redeem again, but it will likely incur more fees and
           it may be rejected again.
         </div>
-        <a data-tmpl="txid" class="d-block fs12 mono break-all border p-2 mt-2"></a>
+        <a data-tmpl="txid" class="d-block fs12 mono word-break-all border p-2 mt-2"></a>
         <div class="d-flex align-items-stretch mt-3">
           <button data-tmpl="doNothingBttn" class="flex-grow-1 me-2">Do Nothing</button>
           <button data-tmpl="tryAgainBttn" class="flex-grow-1 ms-2">Try Again</button>
