--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -147,7 +147,7 @@
   </div>
 </h3>
 <img class="mb-4" id="qrcode" />
-<div class="mono deposit-address border mb-4">
+<div class="mono fs15 p-2 border word-break-all border mb-3 mx-3">
   <span id="depositAddress" class="user-select-all"></span>
   <span id="copyAddressBtn" class="ico-copy mt-2 ml-2 fs18 pointer"></span>
   <span id="copyAlert" class="d-hide">[[[copied]]]</span>
@@ -158,7 +158,7 @@
 <div class="d-flex">
   <button id="newDepAddrBttn" type="button" class="go justify-content-center">[[[New Address]]]</button>
 </div>
-<div class="fs15 pt-3 text-center d-hide text-danger text-break" id="depositErr"></div>
+<div class="fs15 pt-3 text-center d-hide text-danger text-break mb-3" id="depositErr"></div>
 {{end}}
 
 {{define "certPicker"}}
@@ -746,7 +746,7 @@
     </div>
     <hr class="dashed w-100 mb-3">
     <div class="mb-2">[[[Your Deposit Address]]]</div>
-    <div class="mono deposit-address border user-select-all" data-tmpl="depoAddr"></div>
+    <div class="mono fs15 p-2 border word-break-all border user-select-all" data-tmpl="depoAddr"></div>
     <span data-tmpl="sendEnough">[[[Send enough for bonds]]]</span> {{- /* generic message if the fee buffer is unknown */}}
   </div>
 </div>
