add button tooltip

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -137,7 +137,7 @@
                     [[[Settings]]]
                   </button>
                 </div>
-                <button id="needsProviderBttn" class="flex-center mt-2 lh1 fs17">
+                <button id="needsProviderBttn" class="flex-center mt-2 lh1 fs17" data-tooltip="[[[add_provider_tooltip]]]">
                   <span class="ico-disconnected text-warning demi me-2"></span>
                   <span>Add a custom API provider</span>
                 </button>
