--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -419,9 +419,9 @@
                     <div data-tmpl="bal" class="flex-center"></div>
                   </div>
                 </div>
-                <div data-tmpl="wantProviders" class="flex-stretch-column border-bottom fs16">
-                  <button class="m-2 p-2">
-                    <span class="ico-disconnected me-2"></span>
+                <div data-tmpl="wantProvidersBox" class="flex-stretch-column border-bottom fs16">
+                  <button data-tmpl="wantProviders" class="m-2 p-2" data-tooltip="[[[add_provider_tooltip]]]">
+                    <span class="ico-disconnected text-warning me-2"></span>
                     <span>You should specify a custom API provider</span>
                   </button>
                 </div>
