--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -13,7 +13,10 @@
       <span class="me-2 text-danger ico-disconnected d-hide" id="disconnectedIcon"></span>
       <span id="connectionStatus"></span>
     </div>
-    <hr>
+    <div class="py-1 border-top border-bottom">
+      <div>Account ID</div>
+      <div class="user-select-all w-100 overflow-ellipsis">{{.Exchange.AcctID}}</div>
+    </div>
     <div class="flex-stretch-column">
       <div class="d-flex align-items-stretch">
         <div class="flex-center flex-grow-1 pe-3">
